[package]
name = "ds18b20"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/fuchsnj/ds18b20"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
one-wire-bus = {git = "https://github.com/rednaz1337/one-wire-bus"}
embedded-hal = {version="1.0.0-alpha.10"}
embedded-hal-compat = "0.10.0"